--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,11 @@
         <activity android:name=".HomeActivity">
         </activity>
         <activity android:name=".MapActivity"></activity>
+        <activity android:name=".SettingActivity"></activity>
+        <activity android:name=".MoneyActivity"></activity>
+        <activity android:name=".LikeActivity"></activity>
+        <activity android:name=".AddressActivity"></activity>
+        <activity android:name=".MessageActivity"></activity>
         <activity android:name="FragmentActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -32,6 +37,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".SearchActivity"></activity>
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
