--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,8 @@
         <activity android:name=".LikeActivity"></activity>
         <activity android:name=".AddressActivity"></activity>
         <activity android:name=".MessageActivity"></activity>
+        <activity android:name=".PayActivity"></activity>
+
         <activity android:name="FragmentActivity"
             android:windowSoftInputMode="adjustUnspecified|stateHidden">
             <intent-filter>
@@ -40,6 +42,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
         <activity android:name=".SearchActivity"></activity>
         <meta-data
             android:name="com.google.android.gms.version"
